--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <header>
         <section class="header-icons-container">
             <div class="icons">
-                <a href="https://www.facebook.com/"></a> <span class="flaticon-001-facebook" target="_blank"></span></a>
-                <a href="https://twitter.com/?lang=es"></a> <span class="flaticon-002-twitter" target="_blank"></a>
-                <a href="https://www.youtube.com/"></a> <span class="flaticon-008-youtube" target="_blank"> </span></a>
-                <a href="https://ar.linkedin.com/"></a> <span class="flaticon-010-linkedin" target="_blank"></span></a>
-                <a href="https://www.instagram.com/"></a> <span class="flaticon-011-instagram" target="_blank"> </span></a>
+                <a href="https://www.facebook.com/" target="_blank"><span class="flaticon-001-facebook" ></span></a>
+                <a href="https://twitter.com/?lang=es" target="_blank"><span class="flaticon-002-twitter" ></span></a>
+                <a href="https://www.youtube.com/" target="_blank"><span class="flaticon-008-youtube" > </span></a>
+                <a href="https://ar.linkedin.com/" target="_blank"><span class="flaticon-010-linkedin" ></span></a>
+                <a href="https://www.instagram.com/" target="_blank"><span class="flaticon-011-instagram" ></span></a>
             </div>
         </section>
         
